Version NEXT
 * Fixed possible memory leak in ConcurrencyMonitorProcessor. This results in
 slight behaviour change and increase in logging.
 * Introduced ability to clear ConcurrencyMonitorProcessor.

Version 4.8.1 
 * Added erma-test as a proper seperate artifact to be used by users of ERMA.

Version 4.8:
 * Fixed the NPE issue with instantiating TransactionMonitor with inheritable attributes passed into constructor.  Also fixed the build script to set the targetCompatibility in the proper place

Version 4.7:
 * Fixed an issue with daizy-chaining monitor inheritable attribute setting and marking it serializable, when using MapBasedInheritableStrategy

Version 4.6.1:
 * ERMA-32: Resolved issue with completing composite monitors that were never started.

Version 4.6:
 * ERMA-31: Changed build to be able to produce signed Javadoc and source jars and Maven .pom files
            and publish to MavenCentral
 * Moved test-related classes dependent upon junit from erma-api/src to erma-api/test

Version 4.5:
 * ERMA-30: Added support for disabling prepending of class names to monitor names when using the
            Monitored annotation

Version 4.4.1:
 * Added NoOpInheritableStrategy
 * Fixed the build
 * Removed locally stored Powermock to use the version from MavenCentral

Version 4.1:
 * Added Spring JMX annotations to erma-lib mbeans

Version 4.0:
 * JDK 1.5 minimum required
 * Gradle build conversion, deps pulled from Maven2 public repository
 * MongoDBMonitorProcessor

Version 3.3:
 * ERMA-4: Add first-class support for resultCode to the ERMA API
 * ERMA-9: Expose renderer in LoggingMonitorProcessor
 * ERMA-11: TransactionMonitorInterceptor omits attributes on thrown exception
 * ERMA-16: Add an attribute interface to consolidate all common monitor attributes
 * ERMA-18: erma-lib-src.jar built with incorrect fileset
 * ERMA-21: inheritable strategies for MonitoringEngine
 * ERMA-25: ValueMonitor
 * ERMA-26: Tune ValueMonitor for minimal overhead
 * Added javadocs