@@ -2,6 +2,8 @@ Version NEXT
  * Fixed possible memory leak in ConcurrencyMonitorProcessor. This results in
  slight behaviour change and increase in logging.
  * Introduced ability to clear ConcurrencyMonitorProcessor.
+ * Fixed bug where exception is thrown in CPUProfilingMonitorProcessor when a
+ monitor is processed that had not been started by the processor.
 
 Version 4.8.1 
  * Added erma-test as a proper seperate artifact to be used by users of ERMA.
